# better-tg-upload

./: .gitignore  LICENSE  README.md  config_sample.py  pyproject.toml  requirements.txt
better_tg_upload/: __main__.py
better_tg_upload/cli/: __init__.py  bootstrap.py  parser.py
better_tg_upload/core/: __init__.py  chat_resolve.py  client_manager.py  config.py  exceptions.py  link_parser.py  runner.py  setup.py  validate.py
better_tg_upload/profiles/: __init__.py  store.py
better_tg_upload/templates/: __init__.py  config_sample.py
better_tg_upload/transfer/: __init__.py  download.py  large_upload.py  media_probe.py  progress.py  retry.py  splitter.py  tree_upload.py  upload.py
better_tg_upload/utils/: fs.py  log.py  media.py
